# renderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
Cameras/: BasicCamera.cpp  BasicCamera.h
CodeHelper/: Triangle.h  TriangleList.cpp  TriangleList.h  Vec3.cpp  Vec3.h  constants.h  mathutil.cpp  mathutil.h
Lights/: Light.cpp  Light.h
Lights/LightVariants/: AreaLight.cpp  AreaLight.h  PointLight.cpp  PointLight.h  SunLight.cpp  SunLight.h
Materials/: Material.h
Materials/MaterialVariants/: BlingPhongMaterial.cpp  BlingPhongMaterial.h  BlinnPhongMaterial.cpp  BlinnPhongMaterial.h  DiffuseMaterial.cpp  DiffuseMaterial.h  EmissionMaterial.cpp  EmissionMaterial.h  GlassMaterial.cpp  GlassMaterial.h  MirrorMaterial.cpp  MirrorMaterial.h
Objects/: Mesh.cpp  Mesh.h  ObjFileParser.cpp  ObjFileParser.h  Object.cpp  Object.h
Objects/ObjectVariants/: Sphere.cpp  Sphere.h
Ray/: Ray.cpp  Ray.h
Renderer/: Renderer.cpp  Renderer.h
Scene/: Scene.cpp  Scene.h
Structures/: AABB.cpp  AABB.h  BVH.cpp  BVH.h
